logs added