@@ -2,32 +2,26 @@ package com.preetinest.impl;
 
 import com.preetinest.dto.request.InquiryRequestDTO;
 import com.preetinest.dto.response.InquiryResponseDTO;
-import com.preetinest.entity.Blog;
-import com.preetinest.entity.Clients;
-import com.preetinest.entity.Inquiry;
-import com.preetinest.entity.Services;
-import com.preetinest.entity.User;
-import com.preetinest.repository.BlogRepository;
-import com.preetinest.repository.ClientRepository;
-import com.preetinest.repository.InquiryRepository;
-import com.preetinest.repository.ServiceRepository;
-import com.preetinest.repository.UserRepository;
+import com.preetinest.entity.*;
+import com.preetinest.repository.*;
 import com.preetinest.service.InquiryService;
 import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.util.*;
 
 @Service
+@RequiredArgsConstructor
 public class InquiryServiceImpl implements InquiryService {
+
+    private static final Logger log = LoggerFactory.getLogger(InquiryServiceImpl.class);
 
     private final InquiryRepository inquiryRepository;
     private final ServiceRepository serviceRepository;
@@ -35,213 +29,218 @@ public class InquiryServiceImpl implements InquiryService {
     private final ClientRepository clientRepository;
     private final UserRepository userRepository;
 
-    @Autowired
-    public InquiryServiceImpl(InquiryRepository inquiryRepository, ServiceRepository serviceRepository,
-                              BlogRepository blogRepository, ClientRepository clientRepository,
-                              UserRepository userRepository) {
-        this.inquiryRepository = inquiryRepository;
-        this.serviceRepository = serviceRepository;
-        this.blogRepository = blogRepository;
-        this.clientRepository = clientRepository;
-        this.userRepository = userRepository;
-    }
-
     @Override
-    public Map<String, Object> createInquiry(InquiryRequestDTO requestDTO) {
-        String slug = requestDTO.getSlug();
-        String pageType = "GENERAL";  // Default for homepage/contact form
-        String pageName = "Homepage"; // or "Contact Us", "General Inquiry" – as per your preference
+    @Transactional
+    public Map<String, Object> createInquiry(InquiryRequestDTO dto) {
+        log.info("=== CREATE INQUIRY START ===");
+        log.info("Incoming inquiry from: {} <{}> | Phone: {}", dto.getName(), dto.getEmail(), dto.getPhone());
+        if (dto.getSlug() != null) log.info("Slug provided: {}", dto.getSlug());
 
-        // Only try to resolve slug if it's present and not blank
-        if (slug != null && !slug.trim().isEmpty()) {
-            // Check Service
+        String pageType = "GENERAL";
+        String pageName = "Homepage / Contact Form";
+        String slug = dto.getSlug() != null ? dto.getSlug().trim() : null;
+
+        // Resolve slug → pageType & pageName
+        if (slug != null && !slug.isEmpty()) {
+            log.info("Attempting to resolve slug: {}", slug);
+
+            // 1. Check Service
             Optional<Services> serviceOpt = serviceRepository.findBySlug(slug);
-            if (serviceOpt.isPresent()) {
+            if (serviceOpt.isPresent() && isActiveEntity(serviceOpt.get())) {
                 Services service = serviceOpt.get();
-                if (service.getDeleteStatus() == 2 && service.isActive() && service.isDisplayStatus()) {
-                    pageType = "SERVICE";
-                    pageName = service.getName();
-                }
+                pageType = "SERVICE";
+                pageName = service.getName();
+                log.info("Slug resolved to SERVICE: {}", pageName);
             }
-
-            // Check Blog if not already matched
-            if ("GENERAL".equals(pageType)) {
+            // 2. Check Blog
+            else {
                 Optional<Blog> blogOpt = blogRepository.findBySlug(slug);
-                if (blogOpt.isPresent()) {
+                if (blogOpt.isPresent() && isActiveEntity(blogOpt.get())) {
                     Blog blog = blogOpt.get();
-                    if (blog.getDeleteStatus() == 2 && blog.isActive() && blog.isDisplayStatus()) {
-                        pageType = "BLOG";
-                        pageName = blog.getTitle();
-                    }
+                    pageType = "BLOG";
+                    pageName = blog.getTitle();
+                    log.info("Slug resolved to BLOG: {}", pageName);
                 }
-            }
-
-            // Check Client if still GENERAL
-            if ("GENERAL".equals(pageType)) {
-                Optional<Clients> clientOpt = clientRepository.findBySlug(slug);
-                if (clientOpt.isPresent()) {
-                    Clients client = clientOpt.get();
-                    if (client.getDeleteStatus() == 2 && client.isActive() && client.isDisplayStatus()) {
+                // 3. Check Client
+                else {
+                    Optional<Clients> clientOpt = clientRepository.findBySlug(slug);
+                    if (clientOpt.isPresent() && isActiveEntity(clientOpt.get())) {
+                        Clients client = clientOpt.get();
                         pageType = "CLIENT";
                         pageName = client.getName();
+                        log.info("Slug resolved to CLIENT: {}", pageName);
+                    } else {
+                        log.warn("Slug '{}' not found or inactive in Services/Blogs/Clients", slug);
+                        pageName = "Unknown Page (slug: " + slug + ")";
                     }
                 }
-            }
-
-            // If slug was provided but nothing matched → still allow, but keep as GENERAL with warning?
-            // Or optionally throw error if you want strict validation only when slug is sent
-            if ("GENERAL".equals(pageType) && slug != null && !slug.trim().isEmpty()) {
-                // Option 1: Allow it as general (recommended for UX)
-                pageName = "Unknown Page (Slug: " + slug + ")";
-
-                // Option 2: Throw exception if slug is invalid (stricter)
-                // throw new IllegalArgumentException("Invalid or inactive slug: " + slug);
             }
         }
 
-        // Create inquiry
         Inquiry inquiry = new Inquiry();
         inquiry.setUuid(UUID.randomUUID().toString());
-        inquiry.setName(requestDTO.getName());
-        inquiry.setLocation(requestDTO.getLocation());
-        inquiry.setMessage(requestDTO.getMessage());
-        inquiry.setEmail(requestDTO.getEmail());
-        inquiry.setPhone(requestDTO.getPhone());
+        inquiry.setName(dto.getName());
+        inquiry.setEmail(dto.getEmail());
+        inquiry.setPhone(dto.getPhone());
+        inquiry.setLocation(dto.getLocation());
+        inquiry.setMessage(dto.getMessage());
         inquiry.setPageName(pageName);
         inquiry.setPageType(pageType);
-        inquiry.setSlug(slug != null && !slug.trim().isEmpty() ? slug : null); // Save slug only if meaningful
+        inquiry.setSlug(slug != null && !slug.isEmpty() ? slug : null);
+
+// These have smart defaults in DB + entity, but we set them explicitly for clarity and consistency
         inquiry.setActive(true);
         inquiry.setDisplayStatus(true);
         inquiry.setDeleteStatus(2);
 
-        Inquiry savedInquiry = inquiryRepository.save(inquiry);
-        return mapToResponseMap(savedInquiry);
+// Optional: set createdBy if admin is updating later (not needed on create from public form)
+// inquiry.setCreatedBy(null); // usually null on public inquiry
+
+// Let JPA Auditing handle these — do NOT set manually unless you disable auditing
+ inquiry.setCreatedAt(LocalDateTime.now());
+ inquiry.setUpdatedAt(LocalDateTime.now());
+
+        Inquiry saved = inquiryRepository.save(inquiry);
+        log.info("Inquiry created successfully | ID: {} | UUID: {} | Page: {}", saved.getId(), saved.getUuid(), pageName);
+
+        Map<String, Object> response = mapToResponseMap(saved);
+        log.info("=== CREATE INQUIRY SUCCESS ===");
+        return response;
     }
+
     @Override
     public Optional<Map<String, Object>> getInquiryById(Long id) {
+        log.info("Fetching inquiry by ID: {}", id);
         return inquiryRepository.findById(id)
-                .filter(i -> i.getDeleteStatus() == 2 && i.isActive() && i.isDisplayStatus())
+                .filter(i -> i.getDeleteStatus() == 2 && i.isActive())
                 .map(this::mapToResponseMap);
     }
 
     @Override
     public Optional<Map<String, Object>> getInquiryByUuid(String uuid) {
+        log.info("Fetching inquiry by UUID: {}", uuid);
         return inquiryRepository.findByUuid(uuid)
-                .filter(i -> i.getDeleteStatus() == 2 && i.isActive() && i.isDisplayStatus())
+                .filter(i -> i.getDeleteStatus() == 2 && i.isActive())
                 .map(this::mapToResponseMap);
     }
 
     @Override
     public Map<String, Object> getAllActiveInquiries(Long userId, Pageable pageable) {
-        User user = userRepository.findById(userId)
-                .filter(u -> u.getDeleteStatus() == 2 && u.isEnable())
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
+        log.info("=== FETCH ALL INQUIRIES | Admin userId: {} ===", userId);
 
-        if (!"ADMIN".equalsIgnoreCase(user.getRole().getName())) {
-            throw new IllegalArgumentException("Only ADMIN users can view inquiries");
-        }
+        User admin = getAdminUser(userId);
 
+        Page<Inquiry> page = inquiryRepository.findAllActiveInquiries(pageable);
 
-        Page<Inquiry> inquiryPage = inquiryRepository.findAllActiveInquiries(pageable);
-        List<Map<String, Object>> inquiries = inquiryPage.getContent()
+        List<Map<String, Object>> inquiries = page.getContent()
                 .stream()
                 .map(this::mapToResponseMap)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> response = new HashMap<>();
         response.put("inquiries", inquiries);
-        response.put("currentPage", inquiryPage.getNumber());
-        response.put("totalItems", inquiryPage.getTotalElements());
-        response.put("totalPages", inquiryPage.getTotalPages());
-        response.put("pageSize", inquiryPage.getSize());
+        response.put("currentPage", page.getNumber());
+        response.put("totalItems", page.getTotalElements());
+        response.put("totalPages", page.getTotalPages());
+        response.put("pageSize", page.getSize());
+        response.put("hasNext", page.hasNext());
+        response.put("hasPrevious", page.hasPrevious());
 
+        log.info("Returned {} inquiries (page {}/{})", inquiries.size(), page.getNumber() + 1, page.getTotalPages());
         return response;
     }
 
     @Override
-    public Map<String, Object> updateInquiry(Long id, InquiryRequestDTO requestDTO, Long userId) {
+    @Transactional
+    public Map<String, Object> updateInquiry(Long id, InquiryRequestDTO dto, Long userId) {
+        log.info("=== UPDATE INQUIRY ID: {} by userId: {} ===", id, userId);
+
         Inquiry inquiry = inquiryRepository.findById(id)
                 .filter(i -> i.getDeleteStatus() == 2)
-                .orElseThrow(() -> new EntityNotFoundException("Inquiry not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException("Inquiry not found"));
 
-        User user = userRepository.findById(userId)
-                .filter(u -> u.getDeleteStatus() == 2 && u.isEnable())
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
+        getAdminUser(userId); // validates permission
 
-        if (!"ADMIN".equalsIgnoreCase(user.getRole().getName())) {
-            throw new IllegalArgumentException("Only ADMIN users can update inquiries");
-        }
+        inquiry.setName(dto.getName());
+        inquiry.setEmail(dto.getEmail());
+        inquiry.setPhone(dto.getPhone());
+        inquiry.setLocation(dto.getLocation());
+        inquiry.setMessage(dto.getMessage());
+        inquiry.setCreatedBy(userRepository.findById(userId).orElse(null)); // optional
 
-        // Update fields (slug/pageType/pageName not updated, assuming fixed)
-        inquiry.setName(requestDTO.getName());
-        inquiry.setLocation(requestDTO.getLocation());
-        inquiry.setMessage(requestDTO.getMessage());
-        inquiry.setEmail(requestDTO.getEmail());
-        inquiry.setPhone(requestDTO.getPhone());
-        inquiry.setActive(true); // or from request if needed
-        inquiry.setDisplayStatus(true);
-        inquiry.setCreatedBy(user);
+        Inquiry updated = inquiryRepository.save(inquiry);
+        log.info("Inquiry ID {} updated successfully", id);
 
-        Inquiry updatedInquiry = inquiryRepository.save(inquiry);
-        return mapToResponseMap(updatedInquiry);
+        return mapToResponseMap(updated);
     }
 
     @Override
+    @Transactional
     public void softDeleteInquiry(Long id, Long userId) {
+        log.info("=== SOFT DELETE INQUIRY ID: {} by userId: {} ===", id, userId);
+
         Inquiry inquiry = inquiryRepository.findById(id)
                 .filter(i -> i.getDeleteStatus() == 2)
-                .orElseThrow(() -> new EntityNotFoundException("Inquiry not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException("Inquiry not found"));
 
-        User user = userRepository.findById(userId)
-                .filter(u -> u.getDeleteStatus() == 2 && u.isEnable())
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
-
-        if (!"ADMIN".equalsIgnoreCase(user.getRole().getName())) {
-            throw new IllegalArgumentException("Only ADMIN users can delete inquiries");
-        }
+        getAdminUser(userId);
 
         inquiry.setDeleteStatus(1);
         inquiry.setActive(false);
         inquiry.setDisplayStatus(false);
         inquiryRepository.save(inquiry);
+
+        log.warn("Inquiry ID {} has been soft-deleted by admin {}", id, userId);
     }
 
-    private InquiryResponseDTO mapToResponseDTO(Inquiry inquiry) {
-        InquiryResponseDTO dto = new InquiryResponseDTO();
-        dto.setId(inquiry.getId());
-        dto.setUuid(inquiry.getUuid());
-        dto.setName(inquiry.getName());
-        dto.setLocation(inquiry.getLocation());
-        dto.setMessage(inquiry.getMessage());
-        dto.setEmail(inquiry.getEmail());
-        dto.setPhone(inquiry.getPhone());
-        dto.setPageName(inquiry.getPageName());
-        dto.setPageType(inquiry.getPageType());
-        dto.setSlug(inquiry.getSlug());
-        dto.setActive(inquiry.isActive());
-        dto.setCreatedAt(inquiry.getCreatedAt());
-        dto.setUpdatedAt(inquiry.getUpdatedAt());
-        dto.setCreatedById(inquiry.getCreatedBy() != null ? inquiry.getCreatedBy().getId() : null);
-        return dto;
+    // ====================== HELPERS ======================
+
+    private User getAdminUser(Long userId) {
+        if (userId == null) {
+            log.error("userId is null – admin access required");
+            throw new IllegalArgumentException("User ID is required");
+        }
+
+        return userRepository.findById(userId)
+                .filter(u -> u.getDeleteStatus() == 2 && u.isEnable())
+                .filter(u -> "ADMIN".equalsIgnoreCase(u.getRole().getName()))
+                .orElseThrow(() -> {
+                    log.error("Access denied: User {} is not an active ADMIN", userId);
+                    return new IllegalArgumentException("Only ADMIN users can perform this action");
+                });
     }
+
+    private boolean isActiveEntity(Object entity) {
+        if (entity instanceof Services s) {
+            return s.getDeleteStatus() == 2 && s.isActive() && s.isDisplayStatus();
+        }
+        if (entity instanceof Blog b) {
+            return b.getDeleteStatus() == 2 && b.isActive() && b.isDisplayStatus();
+        }
+        if (entity instanceof Clients c) {
+            return c.getDeleteStatus() == 2 && c.isActive() && c.isDisplayStatus();
+        }
+        return false;
+    }
+
+    // ====================== MAPPER ======================
 
     private Map<String, Object> mapToResponseMap(Inquiry inquiry) {
-        InquiryResponseDTO dto = mapToResponseDTO(inquiry);
-        Map<String, Object> response = new HashMap<>();
-        response.put("id", dto.getId());
-        response.put("uuid", dto.getUuid());
-        response.put("name", dto.getName());
-        response.put("location", dto.getLocation());
-        response.put("message", dto.getMessage());
-        response.put("email", dto.getEmail());
-        response.put("phone", dto.getPhone());
-        response.put("pageName", dto.getPageName());
-        response.put("pageType", dto.getPageType());
-        response.put("slug", dto.getSlug());
-        response.put("active", dto.isActive());
-        response.put("createdAt", dto.getCreatedAt());
-        response.put("updatedAt", dto.getUpdatedAt());
-        response.put("createdById", dto.getCreatedById());
-        return response;
+        Map<String, Object> map = new HashMap<>();
+        map.put("id", inquiry.getId());
+        map.put("uuid", inquiry.getUuid());
+        map.put("name", inquiry.getName());
+        map.put("email", inquiry.getEmail());
+        map.put("phone", inquiry.getPhone());
+        map.put("location", inquiry.getLocation());
+        map.put("message", inquiry.getMessage());
+        map.put("pageType", inquiry.getPageType());
+        map.put("pageName", inquiry.getPageName());
+        map.put("slug", inquiry.getSlug());
+        map.put("active", inquiry.isActive());
+        map.put("createdAt", inquiry.getCreatedAt());
+        map.put("updatedAt", inquiry.getUpdatedAt());
+        map.put("createdById", inquiry.getCreatedBy() != null ? inquiry.getCreatedBy().getId() : null);
+        return map;
     }
 }
